<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="10dp"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_headline"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/black"
                android:text="@string/main_headline"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:ellipsize="end"
                    android:maxLines="6"
                    android:text="@string/main_content"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/image_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"/>
            </LinearLayout>

            <TextView
                android:id="@+id/main_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="italic"
                android:textColor="@color/purple_200"
                android:text="@string/author" />

            <TextView
                android:id="@+id/main_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/published_at"
                android:textSize="16sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>